--- a/.github/workflows/build_test_ci.yml
+++ b/.github/workflows/build_test_ci.yml
@@ -23,9 +23,12 @@ jobs:
       - uses: actions/checkout@v2
       - uses: subosito/flutter-action@v2
 
+
       - name: Install dependencies
         run: flutter pub get
 
+      - name: Create platform folders
+        run: flutter create .
       # Uncomment this step to verify the use of 'dart format' on each commit.
       # - name: Verify formatting
       #   run: dart format --output=none --set-exit-if-changed .
